--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,11 @@
 <div class="row">
   <div class="col-md-4">
-  <div class="leapyear-algorithmic" data-date="2025/3/12" ></div>
+    <div class="leapyear-algorithmic" data-date="2025/3/12" ></div>
+  </div>
+  <div class="col-md-8">
+    <div id="date-view"></div>
+  </div>
 </div>
-</div>
+<script>
+
+</script>
