--- a/app/views/events/_event_block.html.erb
+++ b/app/views/events/_event_block.html.erb
@@ -1,7 +1,43 @@
-<div class="col-md-12">
-  <div class="card" style='position:absolute;margin-top: -25px;'>
-    <div class="card-status card-status-left bg-blue"></div>
-    <div class="card-body">
+<div class="col-md-8">
+  <% @events= Event.where('uuid IN (?)', set[:members]).order(:starts_at)%>
+  <% @starts_at = Time.at(set[:lead].starts_at).strftime("%M").to_i%>
+  <% case @starts_at
+  when 0
+    @mt = -25
+  when 15
+    @mt= -12.5
+  when 30
+    @mt=0
+  when 45
+    @mt=12.5
+  end%>
+  <div class="card" style='position:absolute;margin-top: <%= @mt%>px; height: <%=(@events.last.ends_at - @events.first.starts_at)/3600 *50%>px'>
+    <div class="card-status card-status-left bg-blue">
+
+    </div>
+    <div class="card-body p-2" style="overflow: scroll;">
+      <ul class="list-group card-list-group">
+      <% for event in @events%>
+      <li class="list-group-item">
+        <div class="media">
+          <div class="media-object"></div>
+          <div class="media-body">
+            <div class="media-heading">
+              <small class="float-right text-muted">
+                <%= link_to "/events/#{event.id}/delete", remote: true, class: "icon" ,data: { confirm: 'Are you sure?' } do %>
+                <i class="fe fe-trash" style='vertical-align:-3px;'></i>
+                <%end%>
+              </small>
+              <h5><%= event.starts_at.strftime("%H:%M")%>-<%= event.ends_at.strftime("%H:%M")%></h5>
+            </div>
+            <div class="text-muted small">
+              <%= event.content%>
+            </div>
+          </div>
+        </div>
+      </li>
+      <%end%>
+    </ul>
     </div>
   </div>
 </div>
