--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -95,7 +95,7 @@
             <a href="/" class="nav-link"><i class="fe fe-home"></i><%=t :home%></a>
           </li>
           <li class="nav-item">
-            <a href="/tour_packages" class="nav-link"><i class="fe fe-box"></i><%=t :tour_packages%></a>
+            <a href="/advertisers" class="nav-link"><i class="fas fa-bullhorn"></i><%=t :advertisers%></a>
           </li>
           <li class="nav-item">
             <a href="/settings" class="nav-link"><i class="fe fe-settings"></i><%=t :settings%></a>
@@ -105,3 +105,4 @@
     </div>
   </div>
 </div>
+<%= render partial: 'layouts/action_header'%>
