--- a/app/views/events/_event_block.html.erb
+++ b/app/views/events/_event_block.html.erb
@@ -1,4 +1,4 @@
-<div class="col-md-8">
+<div class="col-md-11">
   <% @events= Event.where('uuid IN (?)', set[:members]).order(:starts_at)%>
   <% @starts_at = Time.at(set[:lead].starts_at).strftime("%M").to_i%>
   <% case @starts_at
@@ -11,8 +11,8 @@
   when 45
     @mt=12.5
   end%>
-  <div class="card" style='position:absolute;margin-top: <%= @mt%>px; height: <%=(@events.last.ends_at - @events.first.starts_at)/3600 *50%>px'>
-    <div class="card-status card-status-left bg-blue">
+  <div class="card" style='position:absolute;margin-top: <%= @mt%>px; height: <%=(@events.last.ends_at - @events.first.starts_at)/3600 *50%>px; min-height: 50px;'>
+    <div class="card-status card-status-left bg-orange">
 
     </div>
     <div class="card-body p-2" style="overflow: scroll;">
