--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,4 +46,15 @@
   </div>
 </body>
 
+<% if flash[:notice]%>
+<script>
+new Noty({
+  type: 'warning',
+  theme    : 'relax',
+  timeout: 4000,
+  layout: 'bottomLeft',
+  text: '<%=t  flash[:notice]%>'
+}).show();
+</script>
+<%end%>
 </html>
