--- a/app/views/events/_event_block.html.erb
+++ b/app/views/events/_event_block.html.erb
@@ -1,5 +1,6 @@
 <div class="col-md-11 mt-1">
   <% @events= Event.where('uuid IN (?)', set[:members]).order(:starts_at)%>
+  <% @event_end= Event.where('uuid IN (?)', set[:members]).order(:ends_at).last%>
   <% @starts_at = Time.at(set[:lead].starts_at).strftime("%M").to_i%>
   <% case @starts_at
   when 0
@@ -11,33 +12,42 @@
   when 45
     @mt=8.25
   end%>
-  <div class="card" style='position:absolute;margin-top: <%= @mt %>px; height: <%=(@events.last.ends_at - @events.first.starts_at)/3600 *33%>px; min-height: 32px;'>
+  <div class="card" style='position:absolute;margin-top: <%= @mt %>px; height: <%=(@event_end.ends_at - @events.first.starts_at)/3600 *33%>px; min-height: 32px;'>
     <div class="card-status card-status-left bg-orange">
 
     </div>
     <div class="card-body p-2" style="overflow: scroll;">
+      <%if @events.length > 1%>
+      <div class="text-right">
+        <div class="tag tag-danger">
+          <%= @events.length%>
+          <%=t :overlapping_events%>
+          <span class="tag-addon"><i class="fe fe-alert-triangle"></i></span>
+        </div>
+      </div>
+      <%end%>
       <ul class="list-group card-list-group">
-      <% for event in @events%>
-      <li class="list-group-item">
-        <div class="media">
-          <div class="media-object"></div>
-          <div class="media-body">
-            <div class="media-heading">
-              <small class="float-right text-muted">
-                <%= link_to "/events/#{event.id}/delete", remote: true, class: "icon" ,data: { confirm: 'Are you sure?' } do %>
-                <i class="fe fe-trash" style='vertical-align:-3px;'></i>
-                <%end%>
-              </small>
-              <h5><%= event.starts_at.strftime("%H:%M")%>-<%= event.ends_at.strftime("%H:%M")%></h5>
-            </div>
-            <div class="text-muted small">
-              <%= event.content%>
+        <% for event in @events%>
+        <li class="list-group-item">
+          <div class="media">
+            <div class="media-object"></div>
+            <div class="media-body">
+              <div class="media-heading">
+                <small class="float-right text-muted">
+                  <%= link_to "/events/#{event.id}/delete", remote: true, class: "icon" ,data: { confirm: 'Are you sure?' } do %>
+                  <i class="fe fe-trash" style='vertical-align:-3px;'></i>
+                  <%end%>
+                </small>
+                <h5><%= event.starts_at.strftime("%H:%M")%>-<%= event.ends_at.strftime("%H:%M")%></h5>
+              </div>
+              <div class="text-muted small">
+                <%= event.content%>
+              </div>
             </div>
           </div>
-        </div>
-      </li>
-      <%end%>
-    </ul>
+        </li>
+        <%end%>
+      </ul>
     </div>
   </div>
 </div>
