--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -30,4 +30,14 @@
     </div>
   </div>
 </body>
+<% if flash[:notice]%>
+<script>
+new Noty({
+  type: 'warning',
+  theme    : 'relax',
+  timeout: 4000,
+  layout: 'bottomLeft',
+  text: '<%=t  flash[:notice]%>'
+}).show();
+</script>
 </html>
