--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,33 +1,8 @@
 <div class='row'>
-  <div class="col-lg-4 order-lg-1">
+  <div class="col-lg-3 order-lg-1">
     <%= render partial: 'projects/project_block', locals: {project: @project}%>
   </div>
-  <div class="col-lg-8 order-lg-1">
-    <div class="card">
-      <div class="card-header">
-        <h3 class="card-title"></h3>
-        <div class="card-options">
-          <a href="/projects/<%=@project.uuid%>/edit" class='btn btn-secondary'><i class="fe fe-edit" style="vertical-align:-3px;"></i> <%=t :edit%></a>
-        </div>
-      </div>
-      <div class="card-body">
-        <div class='row'>
-          <div class='col-md-12 col-lg-12'>
-            <div class="form-group">
-              <%= label :project, :title , class: "form-label", style: 'color: #7795c1;'%>
-              <div class="form-control-plaintext"><%= @project.title %></div>
-            </div>
-            <div class="form-group">
-              <%= label :project, :details , class: "form-label", style: 'color: #7795c1;'%>
-              <div class="form-control-plaintext text-justify"><%= @project.details %></div>
-            </div>
-            <div class="form-group">
-              <%= label :project, :user_id , class: "form-label", style: 'color: #7795c1;'%>
-              <div class="form-control-plaintext"><%= @project.user_id %></div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+  <div class="col-lg-9 order-lg-1">
+    <%= render partial: 'projects/project_card', locals: {project: @project}%>
   </div>
 </div>
