--- a/app/views/projects/_project_card.html.erb
+++ b/app/views/projects/_project_card.html.erb
@@ -26,22 +26,5 @@
       <a href="/projects/<%=project.uuid%>/edit" class='btn btn-sm btn-secondary'><i class="fe fe-edit" style="vertical-align:-3px;"></i> <%=t :edit%></a>
     </div>
   </div>
-  <div class="card-body">
-    <div class='row'>
-      <div class='col-md-12 col-lg-12'>
-        <div class="form-group">
-          <%= label :project, :title , class: "form-label", style: 'color: #7795c1;'%>
-          <div class="form-control-plaintext"><%= project.title %></div>
-        </div>
-        <div class="form-group">
-          <%= label :project, :details , class: "form-label", style: 'color: #7795c1;'%>
-          <div class="form-control-plaintext text-justify"><%= project.details %></div>
-        </div>
-        <div class="form-group">
-          <%= label :project, :user_id , class: "form-label", style: 'color: #7795c1;'%>
-          <div class="form-control-plaintext"><%= project.user_id %></div>
-        </div>
-      </div>
-    </div>
-  </div>
+    <%= render partial: 'projects/project_details', locals: {project: @project}%>
 </div>
