--- a/app/views/projects/_project_card.html.erb
+++ b/app/views/projects/_project_card.html.erb
@@ -10,7 +10,7 @@
       <i class="fas fa-users"></i> <%=t :users%>
       <%end%>
 
-      <%= link_to "/projects/events/#{project.id}", remote: true, class: "btn btn-sm btn-secondary" do %>
+      <%= link_to "/projects/tasks/#{project.id}", remote: true, class: "btn btn-sm btn-secondary" do %>
       <i class="fas fa-tasks"></i> <%=t :tasks%>
       <%end%>
 
