--- a/app/views/projects/_project_tasks.html.erb
+++ b/app/views/projects/_project_tasks.html.erb
@@ -6,7 +6,7 @@
         <%= link_to "/tasks/new?project_id=#{project.id}", remote: true, class: "btn btn-sm btn-secondary" do %>
         <i class="fe fe-plus"></i> <%=t :new_task %>
         <%end%>
-        <%= link_to "/tasks/list/#{project.id}", remote: true, class: "btn btn-sm btn-secondary" do %>
+        <%= link_to "/tasks/list/1?project_id=#{project.id}", remote: true, class: "btn btn-sm btn-secondary" do %>
         <i class="fe fe-list"></i> <%=t :tasks_list %>
         <%end%>
       </div>
